--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ companies.json
 companies_broken.json
 companies_dislike.json
 filtered_companies.json
+definitive_companies.json
+filtered_companies2.json
+
